2007-05-29 Peter Clifton <pcjc2@cam.ac.uk>

	* include/Makefile.am, include/gschem_dialog.h, include/x_compselect.h
	  include/x_log.h, include/x_multiattrib.h, include/x_pagesel.h
	  include/x_print.h, src/Makefile.am, src/gschem_dialog.c,
	  src/x_attribedit.c src/x_autonumber.c, src/x_compselect.c,
	  src/x_dialog.c, src/x_log.c, src/x_multiattrib.c, src/x_pagesel.c,
	  src/x_print.c: Applied patch by Ivan Stankovic making dialogs
	  within gschem save their position and size on exit and restore on
	  opening. Geometry is saved to {$HOME}/.gEDA/gschem-dialog-geometry

	  Dialogs inherit this functionality by using, or deriving from the
	  new GschemDialog class (A GtkDialog subclass).

2007-05-28 Peter Brett <peter@peter-b.co.uk>

	* src/g_hook.c, src/i_callbacks.c, src/o_complex.c, src/o_copy.c,
	  src/o_misc.c, src/o_net.c, src/x_compselect.c, src/x_window.c:
	  Implement new component library system in gschem.

	  A new component library model was introduced into libgeda to
	  allow gschem etc. to work well with database systems.  This
	  patch updates gschem to use the new library system.  Most code
	  dealing with creating, updating and (un)embedding symbols is
	  affected.  However, this patch should not introduce any changes
	  for the end-user.

2007-05-26 Peter Brett <peter@peter-b.co.uk>

	* lib/system-gschemrc.in: Help menu updates.

	Change help menu now that all documentation is in the wiki.

2007-05-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_image.c: Applied fix for "Write image" seg fault found (and
	fixed) by Robert Fitzsimons.  Thanks!

2007-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20070526 in prep for the next
        release.

2007-05-15 Peter Clifton <pcjc2@cam.ac.uk>

	* src/o_complex.c: Fixed offset in o_complex_translate_all to
	  be relative to bottom left of world bounds. This bug appears
	  to have crept in when switching to world coords, as the