@@ -291,16 +291,12 @@ void gschem_quit(void);
 void main_prog(void *closure, int argc, char *argv[]);
 int main(int argc, char *argv[]);
 /* i_basic.c */
-void i_allow_expose(void);
 void i_show_state(TOPLEVEL *w_current, const char *message);
 void i_set_state(TOPLEVEL *w_current, enum x_states newstate);
 void i_set_state_msg(TOPLEVEL *w_current, enum x_states newstate, const char *message);
-void i_update_left_button(const char *string);
 void i_update_middle_button(TOPLEVEL *w_current, void (*func_ptr)(gpointer, guint, GtkWidget*), const char *string);
-void i_update_right_button(const char *string);
 void i_update_toolbar(TOPLEVEL *w_current);
 void i_update_menus(TOPLEVEL *w_current);
-void i_update_cursor(TOPLEVEL *w_current);
 void i_set_filename(TOPLEVEL *w_current, const gchar *string);
 void i_set_grid(TOPLEVEL *w_current, int visible_grid);
 /* i_callbacks.c */
